--- a/environment.yml
+++ b/environment.yml
@@ -4,114 +4,114 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - abseil-cpp=20211102.0=h0e60522_0
-  - aiohttp=3.8.1=py310he2412df_1
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - arrow-cpp=11.0.0=py310h7cee713_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attrs=22.2.0=pyh71513ae_0
-  - aws-c-common=0.4.57=ha925a31_1
-  - aws-c-event-stream=0.1.6=hd77b12b_5
-  - aws-checksums=0.1.9=ha925a31_0
-  - aws-sdk-cpp=1.8.185=hd77b12b_0
-  - blas=1.0=mkl
-  - boost-cpp=1.78.0=h5b4e17d_0
-  - bottleneck=1.3.5=py310h9128911_0
-  - brotlipy=0.7.0=py310h2bbff1b_1002
-  - bzip2=1.0.8=he774522_0
-  - c-ares=1.18.1=h8ffe710_0
-  - ca-certificates=2023.01.10=haa95532_0
-  - certifi=2022.12.7=py310haa95532_0
-  - cffi=1.15.1=py310h2bbff1b_3
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.0.4=py310haa95532_0
-  - colorama=0.4.6=py310haa95532_0
-  - cryptography=38.0.4=py310h21b164f_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - datasets=2.12.0=pyhd8ed1ab_0
-  - dill=0.3.6=pyhd8ed1ab_1
-  - fftw=3.3.9=h2bbff1b_1
-  - filelock=3.12.0=pyhd8ed1ab_0
-  - frozenlist=1.3.3=py310h2bbff1b_0
-  - fsspec=2023.4.0=pyh1a96a4e_0
-  - future=0.18.3=pyhd8ed1ab_0
-  - gflags=2.2.2=ha925a31_1004
-  - glog=0.5.0=h4797de2_0
-  - huggingface_hub=0.14.1=pyhd8ed1ab_0
-  - icc_rt=2022.1.0=h6049295_2
-  - idna=3.4=py310haa95532_0
-  - importlib-metadata=6.6.0=pyha770c72_0
-  - importlib_metadata=6.6.0=hd8ed1ab_0
-  - intel-openmp=2023.1.0=h57928b3_46319
-  - joblib=1.1.1=py310haa95532_0
-  - libblas=3.9.0=12_win64_mkl
-  - libbrotlicommon=1.0.9=h8ffe710_7
-  - libbrotlidec=1.0.9=h8ffe710_7
-  - libbrotlienc=1.0.9=h8ffe710_7
-  - libcblas=3.9.0=12_win64_mkl
-  - libcurl=7.88.1=h86230a5_0
-  - libffi=3.4.2=hd77b12b_6
-  - liblapack=3.9.0=12_win64_mkl
-  - libprotobuf=3.20.3=h23ce68f_0
-  - libssh2=1.10.0=h680486a_2
-  - libthrift=0.15.0=h636ae23_0
-  - libuv=1.44.2=h8ffe710_0
-  - lz4-c=1.9.4=h2bbff1b_0
-  - mkl=2021.4.0=h0e2418a_729
-  - mkl-service=2.4.0=py310hcf6e17e_0
-  - multidict=6.0.2=py310h2bbff1b_0
-  - multiprocess=0.70.14=py310haa95532_0
-  - ninja=1.10.2=haa95532_5
-  - ninja-base=1.10.2=h6d14046_5
-  - nltk=3.7=pyhd3eb1b0_0
-  - numexpr=2.8.4=py310hd213c9f_0
-  - numpy=1.22.3=py310hed7ac4c_2
-  - openssl=1.1.1t=h2bbff1b_0
-  - orc=1.7.4=h623e30f_1
-  - packaging=23.1=pyhd8ed1ab_0
-  - pandas=1.5.2=py310h4ed8f06_0
-  - pip=22.3.1=py310haa95532_0
-  - pyarrow=11.0.0=py310h790e06d_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pysocks=1.7.1=py310haa95532_0
-  - python=3.10.9=h966fe2a_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-xxhash=3.0.0=py310he2412df_1
-  - python_abi=3.10=2_cp310
-  - pytorch=1.12.1=cpu_py310h5e1f01c_0
-  - pytz=2023.3=pyhd8ed1ab_0
-  - pyyaml=6.0=py310he2412df_4
-  - re2=2022.04.01=h0e60522_0
-  - regex=2022.7.9=py310h2bbff1b_0
-  - requests=2.28.1=py310haa95532_0
-  - responses=0.18.0=pyhd8ed1ab_0
-  - sacremoses=0.0.53=pyhd8ed1ab_0
-  - scipy=1.7.3=py310h6d2d95c_2
-  - setuptools=65.6.3=py310haa95532_0
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.9=h6c2663c_0
-  - sqlite=3.40.1=h2bbff1b_0
-  - tbb=2021.8.0=h59b6b97_0
-  - tk=8.6.12=h2bbff1b_0
-  - tokenizers=0.11.4=py310he5181cf_1
-  - tqdm=4.64.1=py310haa95532_0
-  - transformers=4.28.1=pyhd8ed1ab_0
-  - typing-extensions=4.5.0=hd8ed1ab_0
-  - typing_extensions=4.5.0=pyha770c72_0
-  - tzdata=2022a=hda174b7_0
-  - urllib3=1.26.14=py310haa95532_0
-  - utf8proc=2.6.1=h2bbff1b_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - win_inet_pton=1.1.0=py310haa95532_0
-  - wincertstore=0.2=py310haa95532_2
-  - xxhash=0.8.0=h2bbff1b_3
-  - xz=5.2.10=h8cc25b3_1
-  - yaml=0.2.5=h8ffe710_2
-  - yarl=1.7.2=py310he2412df_2
-  - zipp=3.15.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h8cc25b3_0
-  - zstd=1.5.5=hd43e919_0
+  - abseil-cpp=20211102.0
+  - aiohttp=3.8.1
+  - aiosignal=1.3.1
+  - arrow-cpp=11.0.0
+  - async-timeout=4.0.2
+  - attrs=22.2.0
+  - aws-c-common=0.4.57
+  - aws-c-event-stream=0.1.6
+  - aws-checksums=0.1.9
+  - aws-sdk-cpp=1.8.185
+  - blas=1.0
+  - boost-cpp=1.78.0
+  - bottleneck=1.3.5
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.18.1
+  - ca-certificates=2023.01.10
+  - certifi=2022.12.7
+  - cffi=1.15.1
+  - charset-normalizer=2.0.4
+  - click=8.0.4
+  - colorama=0.4.6
+  - cryptography=38.0.4
+  - dataclasses=0.8
+  - datasets=2.12.0
+  - dill=0.3.6
+  - fftw=3.3.9
+  - filelock=3.12.0
+  - frozenlist=1.3.3
+  - fsspec=2023.4.0
+  - future=0.18.3
+  - gflags=2.2.2
+  - glog=0.5.0
+  - huggingface_hub=0.14.1
+  - icc_rt=2022.1.0
+  - idna=3.4
+  - importlib-metadata=6.6.0
+  - importlib_metadata=6.6.0
+  - intel-openmp=2023.1.0
+  - joblib=1.1.1
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libcurl=7.88.1
+  - libffi=3.4.2
+  - liblapack=3.9.0
+  - libprotobuf=3.20.3
+  - libssh2=1.10.0
+  - libthrift=0.15.0
+  - libuv=1.44.2
+  - lz4-c=1.9.4
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - multidict=6.0.2
+  - multiprocess=0.70.14
+  - ninja=1.10.2
+  - ninja-base=1.10.2
+  - nltk=3.7
+  - numexpr=2.8.4
+  - numpy=1.22.3
+  - openssl=1.1.1t
+  - orc=1.7.4
+  - packaging=23.1
+  - pandas=1.5.2
+  - pip=22.3.1
+  - pyarrow=11.0.0
+  - pycparser=2.21
+  - pyopenssl=22.0.0
+  - pysocks=1.7.1
+  - python=3.10.9
+  - python-dateutil=2.8.2
+  - python-xxhash=3.0.0
+  - python_abi=3.10
+  - pytorch=1.12.1
+  - pytz=2023.3
+  - pyyaml=6.0
+  - re2=2022.04.01
+  - regex=2022.7.9
+  - requests=2.28.1
+  - responses=0.18.0
+  - sacremoses=0.0.53
+  - scipy=1.7.3
+  - setuptools=65.6.3
+  - six=1.16.0
+  - snappy=1.1.9
+  - sqlite=3.40.1
+  - tbb=2021.8.0
+  - tk=8.6.12
+  - tokenizers=0.11.4
+  - tqdm=4.64.1
+  - transformers=4.28.1
+  - typing-extensions=4.5.0
+  - typing_extensions=4.5.0
+  - tzdata=2022a
+  - urllib3=1.26.14
+  - utf8proc=2.6.1
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wheel=0.37.1
+  - win_inet_pton=1.1.0
+  - wincertstore=0.2
+  - xxhash=0.8.0
+  - xz=5.2.10
+  - yaml=0.2.5
+  - yarl=1.7.2
+  - zipp=3.15.0
+  - zlib=1.2.13
+  - zstd=1.5.5
 prefix: C:\Users\rober\anaconda3\envs\multilingual
