--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ MANIFEST
 data/
 all_the_news/
 xlm-roberta-finetuned.zip
+out_job/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
